--- a/week2-assignment/views/products.ejs
+++ b/week2-assignment/views/products.ejs
@@ -18,16 +18,7 @@
                 <button>Buy</button>
             </div>
         <% } %>
-        <h2>Enter a Book</h2>
-        <form action="/add-product" method="POST">
-            <label for="title">Title: </label>
-            <input type="text" name="title">
-            <label for="descript">Description: </label>
-            <input type="text" name="descript">
-            <label for="price">Price: $</label>
-            <input type="text" name="price">
-            <button type="submit">Add Product</button>
-        </form>
+        <a href="/add-product">Click here</a> to add a book.
     </main>
 </body>
 </html>
