Add Week 9 Assignment

--- a/week9-assignment/views/pokemon.ejs
+++ b/week9-assignment/views/pokemon.ejs
@@ -21,15 +21,15 @@
     
     <div class="row justify-content-center m-0 p-0">
         <% if(page != 1) { %>
-            <a href="http://localhost:5000/pokemon/1"><button class="btn btn-secondary m-2">First</button></a>
-            <a href="http://localhost:5000/pokemon/<%=parseInt(page) - 1%>"><button class="btn btn-secondary m-2">Previous</button></a>
+            <a href="/pokemon/1"><button class="btn btn-secondary m-2">First</button></a>
+            <a href="/pokemon/<%=parseInt(page) - 1%>"><button class="btn btn-secondary m-2">Previous</button></a>
         <% } %>
         
         <button class="btn btn-primary m-2"><%=page%></button>
         
         <% if(page != 112) { %>
-            <a href="http://localhost:5000/pokemon/<%=parseInt(page) + 1%>"><button class="btn btn-secondary m-2">Next</button></a>
-            <a href="http://localhost:5000/pokemon/112"><button class="btn btn-secondary m-2">Last</button></a>
+            <a href="/pokemon/<%=parseInt(page) + 1%>"><button class="btn btn-secondary m-2">Next</button></a>
+            <a href="/pokemon/112"><button class="btn btn-secondary m-2">Last</button></a>
         <% } %>
     </div>
 </body>
