--- a/week9-assignment/views/welcomePage.ejs
+++ b/week9-assignment/views/welcomePage.ejs
@@ -14,7 +14,7 @@
             <h1 style="color: white">Welcome to the Pokemon Activity</h1>
         </div>
         <div class="col-12" style="text-align: center;">
-            <a href="http://localhost:5000/pokemon/1">Go to Activity</a>
+            <a href="/pokemon/1">Go to Activity</a>
         </div>
     </div>
 </body>
